Add image and update index file.

--- a/PortfolioPF/index.html
+++ b/PortfolioPF/index.html
@@ -189,7 +189,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="assets/4.jpg" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/Tetons.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -205,7 +205,7 @@
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="assets/Mtn.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/Tetons.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -221,12 +221,12 @@
 
                         <li class="timeline-image">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="assets/waterfall.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/Tetons.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>2017 - 2020</h4>
-                                    <h4 class="subheading">Humble Beginnings, Freelance Web Development</h4>
+                                    <h4 class="subheading">Freelance Website Development</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">Create WordPress websites for local clients. Apply HTML, CSS, JS and PHP to create web based applications.  Build database driven applicatoins, and front end apps.</p>
@@ -236,7 +236,7 @@
 
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="rounded-circle img-fluid" src="assets/lighthouse.png" alt="">
+                                <img class="rounded-circle img-fluid" src="assets/Tetons.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
